@@ -7,24 +7,21 @@ import no.nav.k9.prosesstask.api.ProsessTask;
 import no.nav.k9.prosesstask.api.ProsessTaskData;
 import no.nav.k9.prosesstask.api.ProsessTaskStatus;
 import no.nav.k9.prosesstask.api.ProsessTaskTjeneste;
-import no.nav.ung.kodeverk.behandling.BehandlingStegType;
-import no.nav.ung.kodeverk.behandling.aksjonspunkt.AksjonspunktDefinisjon;
+import no.nav.ung.kodeverk.behandling.BehandlingType;
 import no.nav.ung.kodeverk.dokument.DokumentMalType;
 import no.nav.ung.sak.behandlingslager.behandling.Behandling;
-import no.nav.ung.sak.behandlingslager.behandling.aksjonspunkt.Aksjonspunkt;
-import no.nav.ung.sak.behandlingslager.behandling.aksjonspunkt.AksjonspunktTestSupport;
 import no.nav.ung.sak.behandlingslager.formidling.VedtaksbrevValgEntitet;
 import no.nav.ung.sak.behandlingslager.formidling.VedtaksbrevValgRepository;
 import no.nav.ung.sak.behandlingslager.formidling.bestilling.*;
 import no.nav.ung.sak.db.util.JpaExtension;
 import no.nav.ung.sak.formidling.BrevTestUtils;
+import no.nav.ung.sak.formidling.scenarioer.AvslagScenarioer;
 import no.nav.ung.sak.formidling.scenarioer.EndringInntektScenarioer;
 import no.nav.ung.sak.formidling.scenarioer.FørstegangsbehandlingScenarioer;
 import no.nav.ung.sak.formidling.scenarioer.KombinasjonScenarioer;
 import no.nav.ung.sak.test.util.UngTestRepositories;
 import no.nav.ung.sak.test.util.behandling.TestScenarioBuilder;
 import no.nav.ung.sak.test.util.behandling.UngTestScenario;
-import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
@@ -32,6 +29,7 @@ import java.time.LocalDate;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 @ExtendWith(CdiAwareExtension.class)
 @ExtendWith(JpaExtension.class)
@@ -87,7 +85,13 @@ class VurderVedtaksbrevTaskTest {
         var tasker = prosessTaskTjeneste.finnAlle(VedtaksbrevBestillingTask.TASKTYPE, ProsessTaskStatus.KLAR);
         assertThat(tasker).hasSize(1);
         var task = tasker.getFirst();
+        assertBestillingTask(task, bestilling);
+    }
+
+    private static void assertBestillingTask(ProsessTaskData task, BrevbestillingEntitet bestilling) {
         assertThat(task.getPropertyValue(VedtaksbrevBestillingTask.BREVBESTILLING_ID)).isEqualTo(bestilling.getId().toString());
+        assertThat(task.getGruppe()).contains(BrevbestillingTaskGenerator.FORMIDLING_GRUPPE_PREFIX);
+        assertThat(task.getSekvens()).endsWith("-0");
     }
 
     @Test
@@ -110,39 +114,129 @@ class VurderVedtaksbrevTaskTest {
         List<BrevbestillingEntitet> bestillinger = brevbestillingRepository.hentForBehandling(behandling.getId());
         assertThat(bestillinger).hasSize(2);
 
-        assertThat(bestillinger)
-            .anySatisfy(bestilling -> {
-                assertThat(bestilling.getBehandlingId()).isEqualTo(behandling.getId());
-                assertThat(bestilling.getDokumentMalType()).isEqualTo(DokumentMalType.ENDRING_INNTEKT);
-                assertThat(bestilling.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
-            })
-            .anySatisfy(bestilling -> {
-                assertThat(bestilling.getBehandlingId()).isEqualTo(behandling.getId());
-                assertThat(bestilling.getDokumentMalType()).isEqualTo(DokumentMalType.ENDRING_BARNETILLEGG);
-                assertThat(bestilling.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
-            });
+        var bestilling1 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.ENDRING_INNTEKT))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling1.getBehandlingId()).isEqualTo(behandling.getId());
+        assertThat(bestilling1.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
+        var bestilling2 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.ENDRING_BARNETILLEGG))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling2.getBehandlingId()).isEqualTo(behandling.getId());
+        assertThat(bestilling2.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
 
 
         var vedtaksbrevResultater = behandlingVedtaksbrevRepository.hentForBehandling(behandling.getId());
-        assertThat(vedtaksbrevResultater).hasSize(2);
-
-        assertThat(vedtaksbrevResultater)
-            .anySatisfy(resultat -> {
-                assertThat(resultat.getBrevbestilling().getId()).isEqualTo(bestillinger.getFirst().getId());
-                assertThat(resultat.getResultatType()).isEqualTo(VedtaksbrevResultatType.BESTILT);
-                assertThat(resultat.getBeskrivelse()).isNotNull();
-            })
-            .anySatisfy(resultat -> {
-                assertThat(resultat.getBrevbestilling().getId()).isEqualTo(bestillinger.get(1).getId());
-                assertThat(resultat.getResultatType()).isEqualTo(VedtaksbrevResultatType.BESTILT);
-                assertThat(resultat.getBeskrivelse()).isNotNull();
-            });
+        assertThat(vedtaksbrevResultater).extracting(it -> it.getBrevbestilling().getId())
+            .containsExactlyInAnyOrder(bestillinger.get(0).getId(), bestillinger.get(1).getId());
+        assertThat(vedtaksbrevResultater).extracting(BehandlingVedtaksbrev::getResultatType)
+            .containsExactly(VedtaksbrevResultatType.BESTILT, VedtaksbrevResultatType.BESTILT);
+        assertThat(vedtaksbrevResultater).extracting(BehandlingVedtaksbrev::getBeskrivelse)
+            .isNotNull();
 
 
         var tasker = prosessTaskTjeneste.finnAlle(VedtaksbrevBestillingTask.TASKTYPE, ProsessTaskStatus.KLAR);
         assertThat(tasker).hasSize(2);
         assertThat(tasker).extracting(it -> Long.valueOf(it.getPropertyValue(VedtaksbrevBestillingTask.BREVBESTILLING_ID)))
             .containsExactlyInAnyOrder(bestillinger.get(0).getId(), bestillinger.get(1).getId());
+
+        assertThat(tasker).extracting(ProsessTaskData::getSekvens)
+            .anyMatch(it -> it.endsWith("-0"));
+        assertThat(tasker).extracting(ProsessTaskData::getSekvens)
+            .anyMatch(it -> it.endsWith("-1"));
+
+        assertThat(tasker).allSatisfy(pt -> {
+            assertThat(pt.getGruppe()).contains(BrevbestillingTaskGenerator.FORMIDLING_GRUPPE_PREFIX);
+        });
+    }
+
+    @Test
+    void oppretterBestillingerVedKombinasjonRedigertOgAutomatisk() {
+        UngTestScenario ungTestScenario = KombinasjonScenarioer
+            .kombinasjon_endringMedInntektOgFødselAvBarn(LocalDate.of(2025, 11, 1));
+
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        var behandling = EndringInntektScenarioer.lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+        behandling.avsluttBehandling();
+
+        String redigertBrevHtml = "<h1>redigert</h1>";
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_INNTEKT, true, false, redigertBrevHtml)
+        );
+
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        task.prosesser(prosessTaskData);
+
+        // Assert
+        List<BrevbestillingEntitet> bestillinger = brevbestillingRepository.hentForBehandling(behandling.getId());
+        assertThat(bestillinger).hasSize(2);
+
+        var bestilling1 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.ENDRING_BARNETILLEGG))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling1.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
+        var bestilling2 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.MANUELT_VEDTAK_DOK))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling2.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
+
+        var vedtaksbrevResultater = behandlingVedtaksbrevRepository.hentForBehandling(behandling.getId());
+        assertThat(vedtaksbrevResultater).hasSize(2);
+        assertThat(vedtaksbrevResultater.stream().filter(it -> it.getVedtaksbrevValg() == null)).hasSize(1);
+        assertThat(vedtaksbrevResultater.stream().filter(it -> it.getVedtaksbrevValg() != null)).hasSize(1);
+
+
+    }
+
+    @Test
+    void oppretterBestillingVedKombinasjonHindretOgRedigert() {
+        UngTestScenario ungTestScenario = KombinasjonScenarioer
+            .kombinasjon_endringMedInntektOgFødselAvBarn(LocalDate.of(2025, 11, 1));
+
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        var behandling = EndringInntektScenarioer.lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+
+        behandling.avsluttBehandling();
+
+        String redigertBrevHtml = "<h1>redigert</h1>";
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_BARNETILLEGG, false, true, null)
+        );
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_INNTEKT, true, false, redigertBrevHtml)
+        );
+
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        task.prosesser(prosessTaskData);
+
+        // Assert
+        List<BrevbestillingEntitet> bestillinger = brevbestillingRepository.hentForBehandling(behandling.getId());
+        assertThat(bestillinger).hasSize(1);
+
+        var bestilling2 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.MANUELT_VEDTAK_DOK))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling2.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
+        var vedtaksbrevResultater = behandlingVedtaksbrevRepository.hentForBehandling(behandling.getId());
+        assertThat(vedtaksbrevResultater)
+                    .extracting(BehandlingVedtaksbrev::getVedtaksbrevValg)
+                    .allSatisfy(valg -> assertThat(valg).isNotNull());
     }
 
     @Test
@@ -168,12 +262,12 @@ class VurderVedtaksbrevTaskTest {
         assertThat(resultat.getBrevbestilling()).isNull();
         assertThat(resultat.getResultatType()).isEqualTo(VedtaksbrevResultatType.IKKE_RELEVANT);
         assertThat(resultat.getBeskrivelse()).isNotNull();
+        assertThat(resultat.getVedtaksbrevValg()).isNull();
 
         var tasker = prosessTaskTjeneste.finnAlle(VedtaksbrevBestillingTask.TASKTYPE, ProsessTaskStatus.KLAR);
         assertThat(tasker).hasSize(0);
     }
 
-    @NotNull
     private static ProsessTaskData lagTask(Behandling behandling) {
         var prosessTaskData = ProsessTaskData.forProsessTask(VurderVedtaksbrevTask.class);
         prosessTaskData.setBehandling(behandling.getFagsakId(), behandling.getId(), behandling.getAktørId().getId());
@@ -188,8 +282,9 @@ class VurderVedtaksbrevTaskTest {
             .lagAvsluttetStandardBehandling(ungTestRepositories);
         var behandling = scenarioBuilder.getBehandling();
 
+        VedtaksbrevValgEntitet valg = new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.INNVILGELSE_DOK, false, true, null);
         vedtaksbrevValgRepository.lagre(
-            new VedtaksbrevValgEntitet(behandling.getId(), false, true, null)
+            valg
         );
 
         var prosessTaskData = lagTask(behandling);
@@ -207,6 +302,8 @@ class VurderVedtaksbrevTaskTest {
         assertThat(resultat.getBrevbestilling()).isNull();
         assertThat(resultat.getResultatType()).isEqualTo(VedtaksbrevResultatType.HINDRET_SAKSBEHANDLER);
         assertThat(resultat.getBeskrivelse()).isNull();
+        assertThat(resultat.getVedtaksbrevValg().getId()).isNotNull();
+        assertThat(resultat.getVedtaksbrevValg().getId()).isEqualTo(valg.getId());
 
         var tasker = prosessTaskTjeneste.finnAlle(VedtaksbrevBestillingTask.TASKTYPE, ProsessTaskStatus.KLAR);
         assertThat(tasker).hasSize(0);
@@ -216,13 +313,15 @@ class VurderVedtaksbrevTaskTest {
     void manuellBrevHvisRedigert() {
         // Arrange
         UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
-        UngTestScenario ungTestScenario = EndringInntektScenarioer.endring0KrInntekt_19år(LocalDate.of(2025, 11, 1));
-        TestScenarioBuilder scenarioBuilder = TestScenarioBuilder.builderMedSøknad().medUngTestGrunnlag(ungTestScenario);
-        var behandling = lagAvsluttetBehandlingMedAksjonspunkt(scenarioBuilder, ungTestRepositories);
+        UngTestScenario ungTestScenario = EndringInntektScenarioer.endringMedInntektPå10k_19år(LocalDate.of(2025, 11, 1));
 
-        vedtaksbrevValgRepository.lagre(
-            new VedtaksbrevValgEntitet(behandling.getId(), true, false, "tekst")
-        );
+        var behandling = EndringInntektScenarioer
+            .lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+
+        behandling.avsluttBehandling();
+
+        VedtaksbrevValgEntitet valg = new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_INNTEKT, true, false, "tekst");
+        vedtaksbrevValgRepository.lagre(valg);
 
         var prosessTaskData = lagTask(behandling);
 
@@ -241,23 +340,64 @@ class VurderVedtaksbrevTaskTest {
         var resultat = vedtaksbrevResultater.getFirst();
         assertThat(resultat.getResultatType()).isEqualTo(VedtaksbrevResultatType.BESTILT);
         assertThat(resultat.getBeskrivelse()).isNotNull();
+        assertThat(resultat.getVedtaksbrevValg().getId()).isNotNull();
+        assertThat(resultat.getVedtaksbrevValg().getId()).isEqualTo(valg.getId());
 
         var tasker = prosessTaskTjeneste.finnAlle(VedtaksbrevBestillingTask.TASKTYPE, ProsessTaskStatus.KLAR);
         assertThat(tasker).hasSize(1);
         var task = tasker.getFirst();
-        assertThat(task.getPropertyValue(VedtaksbrevBestillingTask.BREVBESTILLING_ID)).isEqualTo(bestilling.getId().toString());
+        assertBestillingTask(task, bestilling);
+        assertThat(task.getPropertyValue(VedtaksbrevBestillingTask.VEDTAKSBREV_VALG_ID)).isEqualTo(valg.getId().toString());
     }
 
-    @NotNull
-    private static Behandling lagAvsluttetBehandlingMedAksjonspunkt(TestScenarioBuilder scenarioBuilder, UngTestRepositories ungTestRepositories) {
-        scenarioBuilder.leggTilAksjonspunkt(AksjonspunktDefinisjon.KONTROLLER_INNTEKT, BehandlingStegType.KONTROLLER_REGISTER_INNTEKT);
-        var behandling = scenarioBuilder.buildOgLagreMedUng(ungTestRepositories);
-        Aksjonspunkt aksjonspunkt = behandling.getAksjonspunktFor(AksjonspunktDefinisjon.KONTROLLER_INNTEKT);
-        new AksjonspunktTestSupport().setTilUtført(aksjonspunkt, "utført");
+    @Test
+    void skalFeilHvisTomManuellBrevIkkeErRedigert() {
+        // Arrange
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        LocalDate fom = LocalDate.of(2025, 8, 1);
+        UngTestScenario ungTestGrunnlag = AvslagScenarioer.avslagAlder(fom);
+        var behandling = TestScenarioBuilder.builderMedSøknad()
+            .medBehandlingType(BehandlingType.FØRSTEGANGSSØKNAD)
+            .medUngTestGrunnlag(ungTestGrunnlag)
+            .buildOgLagreMedUng(ungTestRepositories);
 
         behandling.avsluttBehandling();
-        var behandlingRepository = ungTestRepositories.repositoryProvider().getBehandlingRepository();
-        behandlingRepository.lagre(behandling, behandlingRepository.taSkriveLås(behandling));
-        return behandling;
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.MANUELT_VEDTAK_DOK , false, false, "tekst")
+        );
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        assertThatThrownBy(() -> task.prosesser(prosessTaskData)).isInstanceOf(IllegalStateException.class).hasMessageContaining("TomVedtaksbrevInnholdBygger");
+
     }
+
+    @Test
+    void skalFeileHvisForsøkerÅBestilleBrevSomIkkeErMulig() {
+        // Arrange
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        UngTestScenario ungTestScenario = EndringInntektScenarioer.endringMedInntektPå10k_19år(LocalDate.of(2025, 11, 1));
+
+        var behandling = EndringInntektScenarioer
+            .lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+        behandling.avsluttBehandling();
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_INNTEKT , true, false, "<h1>gammelt brev</h1>")
+        );
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.MANUELT_VEDTAK_DOK , true, false, "<h1>Nytt brev</h1>")
+        );
+
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        assertThatThrownBy(() -> task.prosesser(prosessTaskData)).isInstanceOf(IllegalStateException.class).hasMessageContaining("valg");
+
+    }
+
 }
